[gd_scene load_steps=7 format=3 uid="uid://bau13c3cip10"]

[ext_resource type="Script" path="res://scripts/user_interface/tutorial.gd" id="1_we1e4"]
[ext_resource type="Shader" path="res://scripts/shaders/BasicTile.gdshader" id="2_o4t1n"]
[ext_resource type="Theme" uid="uid://d018ofb37nf7u" path="res://assets/resources/themes/global_theme.tres" id="2_pl66g"]
[ext_resource type="SpriteFrames" uid="uid://sfw4whlhee64" path="res://assets/vfx/automatic_slider_animation.tres" id="3_vuu8o"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ikv7t"]
bg_color = Color(0.525415, 0.683337, 0.522033, 0.454902)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wkdcu"]
shader = ExtResource("2_o4t1n")
shader_parameter/base_color = Color(0.25098, 0.184314, 0.105882, 1)

[node name="Root" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_we1e4")

[node name="Background" type="Panel" parent="."]
z_index = 100
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ikv7t")

[node name="AnimatedTutorial" type="Control" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="AnimationText" type="Label" parent="AnimatedTutorial"]
unique_name_in_owner = true
z_index = 200
custom_minimum_size = Vector2(800, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -795.5
offset_right = 250.0
offset_bottom = -554.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_pl66g")
horizontal_alignment = 1
vertical_alignment = 2
autowrap_mode = 2

[node name="Animation" type="AnimatedSprite2D" parent="AnimatedTutorial"]
unique_name_in_owner = true
z_index = 200
material = SubResource("ShaderMaterial_wkdcu")
position = Vector2(0, -224)
sprite_frames = ExtResource("3_vuu8o")
autoplay = "default"
frame_progress = 0.523746

[node name="StaticTutorial" type="Control" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="StaticText" type="Label" parent="StaticTutorial"]
unique_name_in_owner = true
z_index = 200
custom_minimum_size = Vector2(800, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -500.0
offset_right = 400.0
offset_bottom = -259.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_pl66g")
horizontal_alignment = 1
vertical_alignment = 2
autowrap_mode = 2

[node name="Texture" type="TextureRect" parent="StaticTutorial"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[connection signal="gui_input" from="Background" to="." method="_on_background_gui_input"]
